jdk11: DatatypeConverter -> java.util.Base64
JAXB (javax.xml.bind) deprecated in Java SE 9 and removed in 11.

https://openjdk.java.net/jeps/320